--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
         var cards = JSON.parse(xhr.responseText);
         var statusHTML = '<ul class="cards">';
         for (var i=0; i<cards.length; i++) {
-          statusHTML += '<li>' + cards[i].name + '</li>';
+          if(cards[i].set !== "GVG" || "TGT") {
+            statusHTML += '<li>' + cards[i].name + '</li>';
+          }
         }
         statusHTML += '</ul>';
         document.getElementById('ajax').innerHTML = statusHTML;
+        console.log(cards);
+      } else {
+        console.log(xhr.readyState);
       }
     };
 
